--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
             </tr>
         </table>
         <hr noshade="1" size="1" color="black">
-        <Center><h4><a href="D:\Web Devlopment\HTML - Personal Site\ContactMe.html">Contact Me</a></h4></Center>
+        <Center><h4><a href="ContactMe.html">Contact Me</a></h4></Center>
     </body>
 </html>
